[metadata]
name = solum
version = 2014.1.0
summary = Application Lifecycle Management for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    solum

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = solum/locale
domain = solum

[update_catalog]
domain = solum
output_dir = solum/locale
input_file = solum/locale/solum.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solum/locale/solum.pot

[entry_points]
console_scripts =
    solum-api = solum.cmd.api:main
    solum-builder-api = solum.cmd.builder:main
    solum-conductor = solum.cmd.conductor:main
    solum-db-manage = solum.cmd.db_manage:main
    solum-deployer = solum.cmd.deployer:main
    solum-worker = solum.cmd.worker:main

mistral.actions =
    solum.create_image = solum.mistral_actions.builder:CreateImageAction
    solum.get_image_id = solum.mistral_actions.builder:GetImageIdAction
    heat.update_stack = solum.mistral_actions.heat:UpdateStackAction
    heat.check_stack = solum.mistral_actions.heat:CheckStackAction

[wheel]
universal = 1
