[metadata]
name = solum
summary = Application Lifecycle Management for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/solum/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    solum

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = solum/locale
domain = solum

[update_catalog]
domain = solum
output_dir = solum/locale
input_file = solum/locale/solum.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solum/locale/solum.pot

[entry_points]
console_scripts =
    solum-api = solum.cmd.api:main
    solum-conductor = solum.cmd.conductor:main
    solum-db-manage = solum.cmd.db_manage:main
    solum-deployer = solum.cmd.deployer:main
    solum-worker = solum.cmd.worker:main

wsgi_scripts =
    solum-wsgi-api = solum.httpd.solum_api:init_application

mistral.actions =
    solum.create_image = solum.mistral_actions.builder:CreateImageAction
    solum.get_image_id = solum.mistral_actions.builder:GetImageIdAction
    heat.update_stack = solum.mistral_actions.heat:UpdateStackAction
    heat.check_stack = solum.mistral_actions.heat:CheckStackAction

oslo.config.opts =
    solum.api.app = solum.api.app:list_opts
    solum.api.auth = solum.api.auth:list_opts
    solum.api.release = solum.api.release:list_opts
    solum.common.catalog = solum.common.catalog:list_opts
    solum.common.clients = solum.common.clients:list_opts
    solum.common.context = solum.common.context:list_opts
    solum.common.exception = solum.common.exception:list_opts
    solum.common.solum_keystoneclient = solum.common.solum_keystoneclient:list_opts
    solum.api.handlers.assembly_handler = solum.api.handlers.assembly_handler:list_opts
    solum.api.handlers.language_pack_handler = solum.api.handlers.language_pack_handler:list_opts
    solum.api.handlers.plan_handler = solum.api.handlers.plan_handler:list_opts
    solum.api.handlers.workflow_handler = solum.api.handlers.workflow_handler:list_opts
    solum.common.repo_utils = solum.common.repo_utils:list_opts
    solum.api.controllers.root = solum.api.controllers.root:list_opts
    solum.conductor.config = solum.conductor.config:list_opts
    solum.objects = solum.objects:list_opts
    solum.deployer.config = solum.deployer.config:list_opts
    solum.deployer.handlers.heat = solum.deployer.handlers.heat:list_opts
    solum.worker.config = solum.worker.config:list_opts

oslo.config.opts.defaults =
    solum.api.app = solum.common.config:set_cors_middleware_defaults

[wheel]
universal = 1
